# qhanoi

./: .travis.yml  CMakeLists.txt  README.md
cmake/: subtree.md
docker/: Dockerfile-android  Dockerfile-android-for-qhanoi  Dockerfile-ubuntu-17.10  Dockerfile-ubuntu-18.04  install-apt-cacher-ng-detector.sh  qt-install-script.qs  readme.md
docker/dummy-project/: CMakeLists.txt  main.cpp
docker/gradle-dummy/: build.gradle  gradle.properties  local.properties
docker/ubuntu16.10/: Dockerfile  readme.txt
docker/ubuntu17.10/: Dockerfile  readme.txt
images/: build-ico.sh
src/: CMakeLists.txt  diskarea.cpp  diskarea.h  highscores.cpp  highscores.h  highscorewindow.cpp  highscorewindow.h  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  playfield.cpp  playfield.h
